2006-09-29  Matthieu Nottale  <nottale@gostai.com>

	Fix bison.mk incorrect path

	* parser/bison/bison.mk: Fix utoken.cc path.

2006-09-28  matthieu nottale  <nottale@gostai.com>

	Fixes for sdk generation

	* network/OPENR/openr.mk: replaced CPPFLAGS= with CPPFLAGS +=.
	* Makefile.am: Hack libkernel.lai and install locations to pretend the lib is not installed.
	  We have to do it in order to include libkernel in an other library.

2006-09-27  matthieu nottale  <nottale@gostai.com>

	Makefile.am fixes

	* Makefile.am: Add missing uext.h. Add libkernel_la_CPPFLAGS because AM_CPPFLAGS is ignored (libkernel_la_CPPFLAGS written in openr.mk)

2006-09-26  Akim Demaille  <akim.demaille@free.fr>

	White space changes.
	* uconnection.cc: White space chanegs.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* uconnection.cc: Include ubanner.hh.
	* userver.cc: Remove declarations that are now in ubanner.hh.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	Update to URBI_DIRS.

	* configure.ac (NETWORK_BSDNET): No longer define it.
	* parser/bison/Makefile.defs: Rename as...
	* parser/bison/bison.mk: this.
	And adjust dir names.
	* network/bsdnet/Makefile.defs: Rename as...
	* network/bsdnet/bsdnet.mk: this.
	And adjust dir names.
	* network/OPENR/Makefile.defs: Rename as...
	* network/OPENR/openr.mk: this.
	And adjust dir names.
	* build-aux/urbi-dirs.m4: Also define kernelincludedir.
	* build-aux/urbi-openr.m4: Formatting changes.
	* README: New.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	Introduce ubanner.cc.
	* ubanner.hh, ubanner.cc: New.
	* userver.cc, userver.h: Use it.
	(UServer::display (const char **)): New.
	Use it.
	* Makefile.am: Adjust.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	Update URBI_DIRS.
	* build-aux/urbi-dirs.m4: Update from liburbi-cpp.
	* configure.ac: Use it.
	* Makefile.am (AM_CPPFLAGS): Remove useless ones, add missing ones.
	Ship uext.h.

2006-09-26  Type Your Name Here  <your.mail.here@fixme.com>

	Include path fix
